# rust-api-test

./: Cargo.toml
src/: config.rs  main.rs
src/config/: default.toml  development.toml  production.toml
src/handlers/: user_handlers.rs
src/routes/: mod.rs  user_routes.rs
