[package]
name = "my_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
config = "0.10"
log = "0.4"          # Log crate for logging
env_logger = "0.10"  # Logger implementation for environment-based configuration